--- a/vetstka/index.html
+++ b/vetstka/index.html
@@ -126,10 +126,10 @@
                                                     <a href="#" rel="nofllow">CHECK PRICE ON AMAZONE</a>
                                                 </div>
                                                 <div class="block1-best-choice-icon">
-                                                    <img src="img/best-choice.png" alt="icon">
+                                                    <img src="img/premium-pick.png" alt="icon">
                                                 </div>
                                             </div>
-                                            
+
                                             <div class="block1-item-wrap">
                                                 <div class="block1-item-img">
                                                     <img src="img/helmet-3.jpg" alt="Best choice">
@@ -138,7 +138,7 @@
                                                     <a href="#" rel="nofllow">CHECK PRICE ON AMAZONE</a>
                                                 </div>
                                                 <div class="block1-best-choice-icon">
-                                                    <img src="img/best-choice.png" alt="icon">
+                                                    <img src="img/best-value.png" alt="icon">
                                                 </div>
                                             </div>
 
