--- a/vetstka/index.html
+++ b/vetstka/index.html
@@ -173,6 +173,8 @@
                                         </a>
                                     </div>
                                 </section>
+
+                                <section class="contact-form-block"></section>
                                 <!-- END CONTENT -->
 
                                 <!-- BEGIN POST NAVIGATION -->
