--- a/vetstka/index.html
+++ b/vetstka/index.html
@@ -174,7 +174,22 @@
                                     </div>
                                 </section>
 
-                                <section class="contact-form-block"></section>
+                                <section class="contact-form-block">
+                                    <div class="contact-form-block-wrap">
+                                        <div class="contact-form-block-header">
+                                            <div class="contact-form-block-header-1">The best</div>
+                                            <div class="contact-form-block-header-2">Gear, Cadgets & Stuff For Men</div>
+                                            <div class="contact-form-block-header-3">Straight to your inbox</div>
+                                        </div>
+                                        <div class="contact-form-block-form">
+                                            <form>
+                                                <p><input type = "text"  name = "firstname" value = "ENTER YOUR EMAIL" class="contact-form-input1"></p>
+                                                <p class="contact-form-confirm-text"><input type = "checkbox" name = "confirmation" value = "confirm">I confirm i wish to sign up to the Gear Hungry mailing list</p>
+                                                <p><input type = "submit" name = "submit" value = "Join now" class="blocks-btn-1"></p>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </section>
                                 <!-- END CONTENT -->
 
                                 <!-- BEGIN POST NAVIGATION -->
