--- a/vetstka/index.html
+++ b/vetstka/index.html
@@ -164,13 +164,15 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="xxx-choice-img-row">
-                                        <img src="img/block2-img.jpg" alt="Helmet name">
-                                    </div>
-                                    <div  class="xxx-choice-btn-row">
-                                        <a href="#" target rel="nofollow">
-                                            <span>CHECK PRICE ON AMAZONE</span>
-                                        </a>
+                                    <div class="xxx-choice-2row">
+                                        <div class="xxx-choice-img-row">
+                                            <img src="img/block2-img.jpg" alt="Helmet name">
+                                        </div>
+                                        <div  class="xxx-choice-btn-row">
+                                            <a href="#" target rel="nofollow">
+                                                <span>CHECK PRICE ON AMAZONE</span>
+                                            </a>
+                                        </div>
                                     </div>
                                 </section>
 
