--- a/vetstka/index.html
+++ b/vetstka/index.html
@@ -151,7 +151,7 @@
                                 <section class="xxx-choice">
                                     <div class="xxx-choice-name-row">
                                         <div class="xxx-choice-num">
-                                            <div class="xxx-choice-num-round">
+                                            <div class="xxx-choice-num-round xxx-choice-shadow">
                                                 <span>1</span>
                                             </div>
                                         </div>
@@ -159,7 +159,7 @@
                                             <h3> <a href="#" target rel="nofollow" >Helmet's name</a></h2>
                                         </div>
                                         <div class="xxx-choice-type">
-                                            <div class="xxx-choice-type-btn">
+                                            <div class="xxx-choice-type-btn xxx-choice-shadow">
                                                 <span>Best choice</span> 
                                             </div>
                                         </div>
